# ffmpeg_image_transport

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  ffmpeg_image_transport.repos  ffmpeg_plugins.xml  package.xml  rosdoc2.yaml
.github/scripts/: build_and_test.bash
.github/workflows/: ci.yaml
cmake/: ffmpeg_image_transport-extras.cmake.in
doc/: conf.py  index.rst  readme_include.md
include/ffmpeg_image_transport/: cuda_encoder.hpp  ffmpeg_decoder.hpp  ffmpeg_encoder.hpp  ffmpeg_publisher.hpp  ffmpeg_subscriber.hpp  parameter_definition.hpp  safe_param.hpp  tdiff.hpp  types.hpp  utils.hpp
launch/: cam.launch.py  flir_camera.launch.py  republish.launch.py  usb_camera.launch.py
src/: cuda_encoder.cu  ffmpeg_decoder.cpp  ffmpeg_encoder.cpp  ffmpeg_publisher.cpp  ffmpeg_subscriber.cpp  manifest.cpp  parameter_definition.cpp  tdiff.cpp  utils.cpp
test/: test_1.cpp  test_encoder.cpp
